Removed font, fixed alignments

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,8 @@ html, body {
 
 h3 {
   text-align: center;
+  margin: 0;
+  padding: 3px;
 }
 canvas {
   display: block;
